--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/mdx": "^1.0.3",
-    "@astrojs/rss": "^3.0.0",
-    "@astrojs/sitemap": "^3.0.0",
-    "astro": "^3.2.1",
-    "decap-cms-app": "^3.0.7"
+    "@astrojs/mdx": "^2.1.0",
+    "@astrojs/rss": "^4.0.3",
+    "@astrojs/sitemap": "^3.0.5",
+    "@astrojs/ts-plugin": "^1.4.0",
+    "astro": "^4.2.4",
+    "decap-cms-app": "^3.0.12"
   }
 }
